; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ioat/extr_ioat.c_ioat_drain_locked.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ioat/extr_ioat.c_ioat_drain_locked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ioat_softc = type { i64, i32 }

@MA_OWNED = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"ioat_drain\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ioat_softc*)* @ioat_drain_locked to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ioat_drain_locked(%struct.ioat_softc* %0) #0 {
  %2 = alloca %struct.ioat_softc*, align 8
  store %struct.ioat_softc* %0, %struct.ioat_softc** %2, align 8
  %3 = load %struct.ioat_softc*, %struct.ioat_softc** %2, align 8
  %4 = getelementptr inbounds %struct.ioat_softc, %struct.ioat_softc* %3, i32 0, i32 1
  %5 = load i32, i32* @MA_OWNED, align 4
  %6 = call i32 @mtx_assert(i32* %4, i32 %5)
  br label %7

7:                                                ; preds = %12, %1
  %8 = load %struct.ioat_softc*, %struct.ioat_softc** %2, align 8
  %9 = getelementptr inbounds %struct.ioat_softc, %struct.ioat_softc* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp sgt i64 %10, 0
  br i1 %11, label %12, label %18

12:                                               ; preds = %7
  %13 = load %struct.ioat_softc*, %struct.ioat_softc** %2, align 8
  %14 = getelementptr inbounds %struct.ioat_softc, %struct.ioat_softc* %13, i32 0, i32 0
  %15 = load %struct.ioat_softc*, %struct.ioat_softc** %2, align 8
  %16 = getelementptr inbounds %struct.ioat_softc, %struct.ioat_softc* %15, i32 0, i32 1
  %17 = call i32 @msleep(i64* %14, i32* %16, i32 0, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 0)
  br label %7

18:                                               ; preds = %7
  ret void
}

declare dso_local i32 @mtx_assert(i32*, i32) #1

declare dso_local i32 @msleep(i64*, i32*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
